fixed all setting for the boxes of product, add alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,23 +84,19 @@ body {
 .prod-title {
     text-align: center;
     font-size: 300%;
-    margin: 50px 0;
+    margin: 50px 50px;
 }
 
 #product-section {
-    height: 600px;
-    /* margin: 0 100px 0 100px; */
+    height: 500px;
+    margin: 0 150px;
     display: inline-block;
-    border: 2px solid black;   
 }
 
 #prod1 {
-    /* background-size: contain; */
     width: 33%;
     height: 100%;
     float: left;
-    padding: 30px 0 0 10px;
-    box-sizing: border-box;
     /* background-color: red; */
 }
 
@@ -108,8 +104,6 @@ body {
     width: 33%;
     height: 100%;
     float: left;
-    padding: 30px 0 0 10px;
-    box-sizing: border-box;
     /* background-color: greenyellow; */
 }
 
@@ -117,14 +111,19 @@ body {
     width: 33%;
     height: 100%;
     float: left;
-    padding: 30px 0 0 10px;
-    box-sizing: border-box;
     /* background-color: blue; */
 }
 
 .prod {
     text-align: center;
     font-size: 150%;
+    padding-top: 20px;;
+}
+
+.prod p {
+    line-height: 30px;
+    margin-top: 10px;
+
 }
 
 /* Open hours and map */
